[tool.poetry]
name = "pyfoster"
version = "0.1.0"
description = "Python Utility Functions on Steroid"
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
